--- a/css/style.css
+++ b/css/style.css
@@ -950,7 +950,7 @@ textarea.input {
   transform: translate(-50%, -5px);
 }
 
-.product .add-to-cart {
+/* .product .add-to-cart {
   position: absolute;
   left: 1px;
   right: 1px;
@@ -964,13 +964,13 @@ textarea.input {
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
   z-index: 2;
-}
+} */
 
-.product:hover .add-to-cart {
+/* .product:hover .add-to-cart {
   -webkit-transform: translateY(100%);
   -ms-transform: translateY(100%);
   transform: translateY(100%);
-}
+} */
 
 .product .add-to-cart .add-to-cart-btn {
   position: relative;
@@ -978,7 +978,7 @@ textarea.input {
   height: 40px;
   padding: 0 30px;
   background-color: #1964af;
-  color: #FFF;
+  color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
   border-radius: 40px;
