--- a/css/form.css
+++ b/css/form.css
@@ -121,6 +121,10 @@ ul{ padding: 0; margin: 0; list-style: none; }
   background: #1964af;
 }
 
+.form-group .login-btn{
+  margin-top: 30px;
+  padding: 10px 0;
+}
 
 .signup-btn{
   margin-top: 40px;
@@ -196,3 +200,4 @@ a .backclick:hover{
   font-weight: bold;
   opacity: 0.7;
 }
+
