--- a/css/style.css
+++ b/css/style.css
@@ -1162,13 +1162,13 @@ textarea.input {
   margin-top: 10px;
 }
 
-.checkbox-filter .input-radio label, .checkbox-filter .input-checkbox label {
+/* .checkbox-filter .input-radio label, .checkbox-filter .input-checkbox label {
   font-size: 12px;
 }
 
 .checkbox-filter .input-radio label small, .checkbox-filter .input-checkbox label small {
   color: #8D99AE;
-}
+} */
 
 /*-- Price Filter --*/
 
@@ -2247,4 +2247,58 @@ input[type="checkbox"] {
 
 .disabled a{
   cursor: not-allowed;
+}
+
+
+
+
+.box select {
+  background-color: #eeecec;
+  color: rgb(19, 19, 19);
+  padding: 5px;
+  width: 220px;
+  border: none ;
+  font-size: 13px;
+  /* box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2); */
+  -webkit-appearance: button;
+  appearance: button;
+  outline: none;
+}
+
+.box::before {
+  content: "\f13a";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20%;
+  height: 100%;
+  text-align: center;
+  font-size: 15px;
+  line-height: 45px;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.1);
+  pointer-events: none;
+}
+
+.box:hover::before {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.box select option {
+  padding: 30px;
+}
+
+.btnnsearch{
+  margin-top: 20px;
+}
+
+
+
+.advanced-search-price input[type="number"]{
+	width: 220px;
+	background-color: #eeecec;
+	border: none;
+  color: black;
+  padding-top: 3px;
 }
